Testing tags and detached HEAD

--- a/docroot/.htaccess
+++ b/docroot/.htaccess
@@ -146,4 +146,4 @@ DirectoryIndex index.php index.html index.htm
   </IfModule>
 </IfModule>
 
-# A little more testing
+# A little more more testing
