--- a/acquia-pipelines.yml
+++ b/acquia-pipelines.yml
@@ -5,5 +5,4 @@ events:
       - hello:
           type: script
           script:
-            - mkdir docroot
-            - echo "Hello, Sailor Moon!" > docroot/hello.txt
+            - echo "Hello, Sailor Moon!" > docroot/something_else.txt
