--- a/acquia-pipelines.yml
+++ b/acquia-pipelines.yml
@@ -2,7 +2,9 @@ version: 1.0.0
 events:
   build:
     steps:
-      - hello:
+      - composer:
           type: script
           script:
-            - echo "Hello, Sailor Moon!" > docroot/something_else.txt
+            # The composer create project files and settings.php db and profile configurations have been provided in the tutorial branch or release. We only need run composer.
+            - composer install --no-progress
+
