--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-# Ignore paths that contain user-generated content.
-docroot/files
-docroot/sites/*/files
-docroot/sites/*/private
-!docroot/sites/default/files
+# Ignore binaries.
+/bin
+
+# Ignore non-custom parts of Drupal.
+/docroot/core
+/docroot/modules/contrib
+/docroot/profiles/contrib
+/docroot/themes/contrib
+/docroot/sites/default/files
+
+# Ignore Composer-managed dependencies.
+vendor/
