--- a/acquia-pipelines.yml
+++ b/acquia-pipelines.yml
@@ -12,18 +12,18 @@ events:
       # Deploy the build artifact to a Cloud on-demand environment.
       - deploy:
           script:
-            - pipelines-ode-deploy
+            - pipelines-deploy
 
   # When a GitHub pull request is merged, this deletes the coresponding ODE.
   pr-merged:
     steps:
       - deploy:
           script:
-            - pipelines-ode-deploy
+            - pipelines-deploy
 
   # When a GitHub pull request is closed, this deletes the coresponding ODE.
   pr-closed:
     steps:
       - deploy:
           script:
-            - pipelines-ode-deploy
+            - pipelines-deploy
