--- a/acquia-pipelines.yml
+++ b/acquia-pipelines.yml
@@ -1,10 +1,29 @@
 version: 1.0.0
+
 events:
   build:
     steps:
-      - composer:
-          type: script
+      # If you have build instructions, put them here. They are not required.
+      - build_site:
           script:
-            # The composer create project files and settings.php db and profile configurations have been provided in the tutorial branch or release. We only need run composer.
-            - composer install --no-progress
+            - touch docroot/index.html
+            - echo "Pipelines examples 701. You successfully deployed your build to an ODE" > docroot/index.html
 
+      # Deploy the build artifact to a Cloud on-demand environment.
+      - deploy:
+          script:
+            - pipelines-deploy
+
+  # When a GitHub pull request is merged, this deletes the coresponding ODE.
+  pr-merged:
+    steps:
+      - deploy:
+          script:
+            - pipelines-deploy
+
+  # When a GitHub pull request is closed, this deletes the coresponding ODE.
+  pr-closed:
+    steps:
+      - deploy:
+          script:
+            - pipelines-deploy
