--- a/acquia-pipelines.yml
+++ b/acquia-pipelines.yml
@@ -2,12 +2,12 @@ version: 1.3.0
 events:
   build:
     steps:
-#      - composer:
-#          type: script
-#          script:
+      - composer:
+          type: script
+          script:
 #            # The composer create project files and settings.php db and profile configurations have been provided in the tutorial branch or release. We only need run composer.
-#            - composer install --no-progress
+            - composer install --no-progress
 
-    - build:
-    script:
-        - php -v
+#    - build:
+#    script:
+#        - php -v
