--- a/acquia-pipelines.yml
+++ b/acquia-pipelines.yml
@@ -1,10 +1,11 @@
-version: 1.3.0
+version: 1.3.1
 events:
   build:
     steps:
-      - composer:
+      - setup:
           type: script
           script:
+            - composer validate --no-check-all --ansi
 #            # The composer create project files and settings.php db and profile configurations have been provided in the tutorial branch or release. We only need run composer.
             - composer install --no-progress
 
