--- a/acquia-pipelines.yml
+++ b/acquia-pipelines.yml
@@ -2,7 +2,7 @@ version: 1.3.0
 events:
   build:
     steps:
-      - setup:
+      - build-setup:
           type: script
           script:
             - composer validate --no-check-all --ansi
@@ -10,7 +10,7 @@ events:
             - composer install --no-progress
   post-deploy:
     steps:
-      - messageout:
+      - post-deploy-messageout:
           type: script
           script:
             - "echo 'The deploy has been completed.'"
